# src/event/dto/update-event.dto.ts
@@ -1,0 +1,4 @@
+import { OmitType } from '@nestjs/swagger';
+import { CreateEventDto } from './create-event.dto';
+
+export class UpdateEventDto extends OmitType(CreateEventDto, [] as const) {}
